--- a/.gitignore
+++ b/.gitignore
@@ -1,181 +1,48 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
+# Virtual environments
 venv/
-ENV/
-env.bak/
-venv.bak/
 venv_new/
+env/
+ENV/
+.venv/
+.env
 
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# VisionMoto specific files
+# Database files
 *.db
 *.sqlite
 *.sqlite3
 visionmoto.db
-visionmoto_demo.db
-*.log
+src/visionmoto.db
 
-# Model files (keep yolov8n.pt but ignore others)
+# Model files
 *.pt
-!yolov8n.pt
+yolov8*.pt
 
-# Video files (keep sample but ignore others)
+# Media files (large)
 *.mp4
 *.avi
 *.mov
-*.mkv
 !assets/sample_video.mp4
 
-# Image files
-*.jpg
-*.jpeg
-*.png
-*.gif
-*.bmp
-*.tiff
-frame_*.jpg
-
-# Performance reports
-performance_report.json
-performance_report.py
-
-# IDE files
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# OS files
+# OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
+desktop.ini
+
+# Logs
+*.log
 
 # Temporary files
 *.tmp
@@ -183,21 +50,19 @@ Thumbs.db
 *.bak
 *.backup
 
-# Node modules (if any frontend dependencies)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Reports (keep template)
+performance_report_*.json
+!reports/performance_report.json
 
-# Coverage reports
+# Distribution
+build/
+dist/
+*.egg-info/
+
+# Coverage
 htmlcov/
 .coverage
-.coverage.*
-coverage.xml
-
-# pytest
 .pytest_cache/
 
-# Local configuration
-config.local.py
-settings.local.py
+# Node (if any)
+node_modules/
