--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,34 @@
-ultralytics
-opencv-python
-numpy
-filterpy
-scipy
-flask
-flask-socketio
-flask-cors
-requests
-paho-mqtt
-pyjwt
-werkzeug
-psycopg2-binary
-redis
-pytest
-pytest-cov
-black
-flake8
+# VisionMoto v2.0 - Challenge 2025
+# Dependências principais
+
+# Visão Computacional
+ultralytics>=8.0.0
+opencv-python>=4.8.0
+numpy>=1.24.0
+
+# Processamento
+filterpy>=1.4.0
+scipy>=1.10.0
+
+# Backend API
+flask>=2.3.0
+flask-socketio>=5.3.0
+flask-cors>=4.0.0
+requests>=2.31.0
+
+# IoT & Comunicação
+paho-mqtt>=1.6.0
+
+# Segurança & Auth
+pyjwt>=2.8.0
+werkzeug>=2.3.0
+
+# Banco de Dados
+psycopg2-binary>=2.9.0
+redis>=4.6.0
+
+# Desenvolvimento & Testes
+pytest>=7.4.0
+pytest-cov>=4.1.0
+black>=23.0.0
+flake8>=6.0.0
