--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -1,256 +1,316 @@
-# Workflow específico para Pull Requests
 name: PR Quality Check
 
 on:
   pull_request:
     branches: [ main, develop ]
-    types: [opened, synchronize, reopened]
+    types: [ opened, synchronize, reopened ]
+
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
+concurrency:
+  group: pr-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 env:
-  PYTHON_VERSION: '3.9'
+  PYTHON_VERSION: "3.9"
+  PIP_DISABLE_PIP_VERSION_CHECK: "1"
+  FORCE_COLOR: "1"
 
 jobs:
-  # Verificação rápida para PRs
   pr-validation:
+    name: PR Validation
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout código
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-    
-    - name: Cache pip dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-pr-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-pr-
-          ${{ runner.os }}-pip-
-    
-    - name: Instalar dependências
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8 black pytest pytest-cov
-    
-    - name: Verificar arquivos modificados
-      run: |
-        echo "Arquivos modificados no PR:"
-        git diff --name-only origin/${{ github.base_ref }}...HEAD
-        
-        echo "Arquivos Python modificados:"
-        git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E "\.py$" || echo "Nenhum arquivo Python modificado"
-    
-    - name: Lint apenas arquivos modificados
-      run: |
-        CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E "\.py$" | tr '\n' ' ')
-        if [ -n "$CHANGED_FILES" ]; then
-          echo "Executando flake8 em: $CHANGED_FILES"
-          flake8 $CHANGED_FILES --count --select=E9,F63,F7,F82 --show-source --statistics
-        else
-          echo "Nenhum arquivo Python para verificar"
-        fi
-    
-    - name: Verificar formatação dos arquivos modificados
-      run: |
-        CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E "\.py$" | tr '\n' ' ')
-        if [ -n "$CHANGED_FILES" ]; then
-          echo "Verificando formatação em: $CHANGED_FILES"
-          black --check --diff $CHANGED_FILES
-        else
-          echo "Nenhum arquivo Python para verificar formatação"
-        fi
-    
-    - name: Executar testes rápidos
-      run: |
-        pytest tests/test_integration_api.py -v --tb=short
-    
-    - name: Verificar se pode fazer build
-      run: |
-        python -c "
-        import sys
-        sys.path.insert(0, 'src')
-        try:
-            from backend.integration_api import VisionMotoIntegrationAPI
-            print('✅ Import da API principal: OK')
-        except Exception as e:
-            print(f'❌ Erro no import: {e}')
-            sys.exit(1)
-        "
-    
-    - name: Comentar no PR com resultado
-      uses: actions/github-script@v6
-      if: always()
-      with:
-        script: |
-          const { data: comments } = await github.rest.issues.listComments({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.issue.number,
-          });
-          
-          // Remove comentários anteriores do bot
-          for (const comment of comments) {
-            if (comment.user.type === 'Bot' && comment.body.includes('🤖 PR Quality Check')) {
-              await github.rest.issues.deleteComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: comment.id,
-              });
-            }
-          }
-          
-          const success = '${{ job.status }}' === 'success';
-          const status = success ? '✅ PASSOU' : '❌ FALHOU';
-          const emoji = success ? '🎉' : '⚠️';
-          
-          const body = `## 🤖 PR Quality Check ${status}
-          
-${emoji} **Status:** ${status}
-**Commit:** \`${{ github.sha }}\`
-**Workflow:** [Ver detalhes](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+      - name: Checkout código
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-### Verificações Realizadas:
-- ${success ? '✅' : '❌'} Lint (flake8) nos arquivos modificados
-- ${success ? '✅' : '❌'} Formatação (black) nos arquivos modificados  
-- ${success ? '✅' : '❌'} Testes unitários básicos
-- ${success ? '✅' : '❌'} Verificação de imports
+      - name: Determinar SHAs do PR e arquivos modificados
+        id: diff
+        shell: bash
+        run: |
+          set -euo pipefail
+          BASE_SHA="${{ github.event.pull_request.base.sha }}"
+          HEAD_SHA="${{ github.event.pull_request.head.sha }}"
+          echo "BASE_SHA=$BASE_SHA" >> $GITHUB_ENV
+          echo "HEAD_SHA=$HEAD_SHA" >> $GITHUB_ENV
 
-${success ? 
-'🚀 **Este PR está pronto para revisão!**' : 
-'🔧 **Este PR precisa de correções antes da revisão.**'}
-          `;
-          
-          await github.rest.issues.createComment({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: context.issue.number,
-            body: body
-          });
+          git diff --name-only "$BASE_SHA...$HEAD_SHA" > changed_files.txt || true
+          echo "Arquivos modificados no PR:"
+          cat changed_files.txt || true
 
-  # Análise de diff para mudanças críticas
-  diff-analysis:
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout código
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    
-    - name: Analisar mudanças críticas
-      run: |
-        echo "## 📊 Análise de Mudanças no PR" > diff-analysis.md
-        echo "" >> diff-analysis.md
-        
-        # Verifica mudanças em arquivos críticos
-        CRITICAL_FILES="src/backend/integration_api.py Dockerfile docker-compose.yml requirements.txt"
-        
-        for file in $CRITICAL_FILES; do
-          if git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -q "$file"; then
-            echo "⚠️ **Arquivo crítico modificado:** \`$file\`" >> diff-analysis.md
-            echo "" >> diff-analysis.md
-            echo "\`\`\`diff" >> diff-analysis.md
-            git diff origin/${{ github.base_ref }}...HEAD -- "$file" | head -50 >> diff-analysis.md
-            echo "\`\`\`" >> diff-analysis.md
-            echo "" >> diff-analysis.md
+          PY_CHANGED="$(grep -E '\.py$' changed_files.txt || true)"
+          {
+            echo "py_changed<<EOF"
+            echo "$PY_CHANGED"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
+
+      - name: Setup Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: pip
+          cache-dependency-path: |
+            requirements.txt
+            **/requirements.txt
+
+      - name: Instalar dependências (app + ferramentas)
+        shell: bash
+        run: |
+          set -euo pipefail
+          python -m pip install --upgrade pip setuptools wheel
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            echo "requirements.txt não encontrado – seguindo apenas com ferramentas."
           fi
-        done
-        
-        # Conta linhas adicionadas/removidas
-        STATS=$(git diff --stat origin/${{ github.base_ref }}...HEAD)
-        echo "### 📈 Estatísticas:" >> diff-analysis.md
-        echo "\`\`\`" >> diff-analysis.md
-        echo "$STATS" >> diff-analysis.md
-        echo "\`\`\`" >> diff-analysis.md
-        
-        cat diff-analysis.md
-    
-    - name: Upload análise como artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: diff-analysis
-        path: diff-analysis.md
+          pip install flake8 black pytest pytest-cov pip-audit
 
-  # Verificação de segurança para PRs
-  security-check-pr:
+      - name: Lint apenas arquivos Python modificados (flake8)
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ -s changed_files.txt ]; then
+            mapfile -t PYFILES < <(grep -E '\.py$' changed_files.txt || true)
+            if [ "${#PYFILES[@]}" -gt 0 ]; then
+              echo "Executando flake8 em: ${PYFILES[*]}"
+              flake8 "${PYFILES[@]}" --count --select=E9,F63,F7,F82 --show-source --statistics
+            else
+              echo "Nenhum arquivo Python modificado."
+            fi
+          else
+            echo "Lista de arquivos modificados vazia."
+          fi
+
+      - name: Verificar formatação dos arquivos modificados (black --check)
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ -s changed_files.txt ]; then
+            mapfile -t PYFILES < <(grep -E '\.py$' changed_files.txt || true)
+            if [ "${#PYFILES[@]}" -gt 0 ]; then
+              echo "Verificando formatação em: ${PYFILES[*]}"
+              black --check --diff "${PYFILES[@]}"
+            else
+              echo "Nenhum arquivo Python para verificar formatação."
+            fi
+          else
+            echo "Lista de arquivos modificados vazia."
+          fi
+
+      - name: Executar testes rápidos (se arquivo existir)
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ -f tests/test_integration_api.py ]; then
+            pytest tests/test_integration_api.py -v --tb=short
+          else
+            echo "Arquivo tests/test_integration_api.py não encontrado – pulando testes rápidos."
+          fi
+
+      - name: Verificar se pode fazer build / import
+        shell: bash
+        run: |
+          set -euo pipefail
+          python - <<'PY'
+          import sys, importlib
+          sys.path.insert(0, 'src')
+          try:
+              importlib.import_module('backend.integration_api')
+              print('✅ Import da API principal: OK')
+          except Exception as e:
+              print(f'❌ Erro no import: {e}')
+              raise
+          PY
+
+      - name: Comentar no PR com resultado
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const {owner, repo} = context.repo;
+            const issue_number = context.issue.number;
+
+            const { data: comments } = await github.rest.issues.listComments({ owner, repo, issue_number });
+            for (const c of comments) {
+              if (c.user?.type === 'Bot' && c.body?.includes('<!-- PR_QUALITY_CHECK_MARK -->')) {
+                await github.rest.issues.deleteComment({ owner, repo, comment_id: c.id });
+              }
+            }
+
+            const success = '${{ job.status }}' === 'success';
+            const status = success ? '✅ PASSOU' : '❌ FALHOU';
+            const emoji = success ? '🎉' : '⚠️';
+
+            const body = `<!-- PR_QUALITY_CHECK_MARK -->
+            ## 🤖 PR Quality Check ${status}
+
+            ${emoji} **Status:** ${status}  
+            **Commit:** \`${{ github.sha }}\`  
+            **Workflow:** [Ver detalhes](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+
+            ### Verificações Realizadas
+            - ${success ? '✅' : '❌'} Lint (flake8) nos arquivos modificados  
+            - ${success ? '✅' : '❌'} Formatação (black) nos arquivos modificados  
+            - ${success ? '✅' : '❌'} Teste rápido (test_integration_api.py)  
+            - ${success ? '✅' : '❌'} Verificação de imports
+
+            ${success ? '🚀 **Este PR está pronto para revisão!**' : '🔧 **Este PR precisa de correções antes da revisão.**'}
+            `;
+            await github.rest.issues.createComment({ owner, repo, issue_number, body });
+
+  diff-analysis:
+    name: Diff Analysis
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout código
-      uses: actions/checkout@v4
-    
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-    
-    - name: Instalar ferramentas de segurança
-      run: |
-        pip install bandit safety
-    
-    - name: Verificar segurança com bandit
-      run: |
-        bandit -r src/ -f json -o bandit-pr-report.json || true
-        
-        if [ -f bandit-pr-report.json ]; then
+      - name: Checkout código
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Analisar mudanças críticas
+        id: analyze
+        shell: bash
+        env:
+          BASE_SHA: ${{ github.event.pull_request.base.sha }}
+          HEAD_SHA: ${{ github.event.pull_request.head.sha }}
+        run: |
+          set -euo pipefail
+          echo "## 📊 Análise de Mudanças no PR" > diff-analysis.md
+          echo >> diff-analysis.md
+
+          CRITICAL_FILES="src/backend/integration_api.py Dockerfile docker-compose.yml requirements.txt"
+
+          for file in $CRITICAL_FILES; do
+            if git diff --name-only "$BASE_SHA...$HEAD_SHA" | grep -q "^$file$"; then
+              {
+                echo "⚠️ **Arquivo crítico modificado:** \`$file\`"
+                echo
+                echo '```diff'
+                git diff "$BASE_SHA...$HEAD_SHA" -- "$file" | head -50 || true
+                echo '```'
+                echo
+              } >> diff-analysis.md
+            fi
+          done
+
+          {
+            echo "### 📈 Estatísticas:"
+            echo '```'
+            git diff --stat "$BASE_SHA...$HEAD_SHA" || true
+            echo '```'
+          } >> diff-analysis.md
+
+          cat diff-analysis.md
+          {
+            echo "### Resumo"
+            cat diff-analysis.md
+          } >> "$GITHUB_STEP_SUMMARY"
+
+      - name: Upload análise como artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: diff-analysis
+          path: diff-analysis.md
+
+  security-check-pr:
+    name: Security Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: pip
+
+      - name: Instalar ferramentas de segurança
+        shell: bash
+        run: |
+          set -euo pipefail
+          python -m pip install --upgrade pip
+          pip install bandit pip-audit
+
+      - name: Verificar segurança com bandit (gera SARIF)
+        shell: bash
+        continue-on-error: true
+        run: |
+          set -euo pipefail
+          TARGET="src"
+          [ -d "$TARGET" ] || TARGET="."
+          bandit -r "$TARGET" -q -f sarif -o bandit.sarif || true
+
           echo "## 🔒 Relatório de Segurança (Bandit)" > security-report.md
-          echo "" >> security-report.md
-          
-          ISSUES=$(cat bandit-pr-report.json | python -c "
-import json, sys
-data = json.load(sys.stdin)
-print(f'**Issues encontrados:** {len(data.get(\"results\", []))}')
-for issue in data.get('results', [])[:5]:  # Mostra apenas os 5 primeiros
-    print(f'- **{issue[\"test_name\"]}** em \`{issue[\"filename\"]}:{issue[\"line_number\"]}\`')
-    print(f'  Severidade: {issue[\"issue_severity\"]} | Confiança: {issue[\"issue_confidence\"]}')
-    print()
-          ")
-          
-          echo "$ISSUES" >> security-report.md
+          bandit -r "$TARGET" -q -f json -o bandit.json || true
+          python - <<'PY' >> security-report.md
+          import json
+          try:
+              data = json.load(open('bandit.json'))
+              results = data.get('results', [])
+              print(f"**Issues encontrados:** {len(results)}\n")
+              for issue in results[:5]:
+                  print(f"- **{issue.get('test_name','?')}** em `{issue.get('filename','?')}:{issue.get('line_number','?')}`")
+                  print(f"  Severidade: {issue.get('issue_severity','?')} | Confiança: {issue.get('issue_confidence','?')}\n")
+          except Exception as e:
+              print(f"Falha ao processar bandit.json: {e}")
+          PY
+
+          echo "### Bandit (resumo)" >> "$GITHUB_STEP_SUMMARY"
+          cat security-report.md >> "$GITHUB_STEP_SUMMARY"
+
+      - name: Subir SARIF do Bandit para Code Scanning
+        if: always()
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: bandit.sarif
+
+      - name: Verificar dependências com pip-audit
+        shell: bash
+        continue-on-error: true
+        run: |
+          set -euo pipefail
+          if [ -f requirements.txt ]; then
+            pip-audit -r requirements.txt -f json -o pip-audit.json || true
+            echo >> security-report.md
+            echo "## 📦 Verificação de Dependências (pip-audit)" >> security-report.md
+            python - <<'PY' >> security-report.md
+            import json
+            try:
+                data = json.load(open('pip-audit.json'))
+                vulns = data if isinstance(data, list) else data.get('vulnerabilities', [])
+                print(f"**Vulnerabilidades encontradas:** {len(vulns)}\n")
+                for v in vulns[:3]:
+                    dep = v.get('dependency', {})
+                    pkg = dep.get('name', '?')
+                    ver = dep.get('version', '?')
+                    advs = v.get('vulns', [])
+                    if advs:
+                        print(f"- **{pkg}** {ver}")
+                        d = advs[0].get('description', '')
+                        print(f"  {advs[0].get('id','CVE')} — {d[:180]}{'...' if len(d)>180 else ''}\n")
+            except Exception as e:
+                print(f"Falha ao processar pip-audit.json: {e}")
+            PY
+          else
+            echo "requirements.txt não encontrado – pulando pip-audit." >> security-report.md
+          fi
+
           cat security-report.md
-        fi
-      continue-on-error: true
-    
-    - name: Verificar dependências com safety
-      run: |
-        safety check --json --output safety-pr-report.json || true
-        
-        if [ -f safety-pr-report.json ]; then
-          echo "## 📦 Verificação de Dependências (Safety)" >> security-report.md
-          echo "" >> security-report.md
-          
-          VULNS=$(cat safety-pr-report.json | python -c "
-import json, sys
-try:
-    data = json.load(sys.stdin)
-    vulns = data.get('vulnerabilities', [])
-    print(f'**Vulnerabilidades encontradas:** {len(vulns)}')
-    for vuln in vulns[:3]:  # Mostra apenas as 3 primeiras
-        print(f'- **{vuln[\"package_name\"]}** {vuln[\"analyzed_version\"]}')
-        print(f'  {vuln[\"advisory\"]}')
-        print()
-except:
-    print('Nenhuma vulnerabilidade encontrada')
-          ")
-          
-          echo "$VULNS" >> security-report.md
-        fi
-      continue-on-error: true
-    
-    - name: Upload relatório de segurança
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: security-report-pr
-        path: |
-          security-report.md
-          bandit-pr-report.json
-          safety-pr-report.json
+
+      - name: Upload relatório de segurança
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: security-report-pr
+          path: |
+            security-report.md
+            bandit.json
+            bandit.sarif
+            pip-audit.json
