--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,13 @@ venv_new/
 env/
 ENV/
 .venv/
+
+# Environment variables (CRÍTICO - NUNCA COMMITAR!)
 .env
+.env.local
+.env.*.local
+*.env
+!.env.example
 
 # Database files
 *.db
@@ -18,6 +24,9 @@ ENV/
 *.sqlite3
 visionmoto.db
 src/visionmoto.db
+visionmoto_integration.db
+data/
+backup_*.db
 
 # Model files
 *.pt
@@ -43,6 +52,8 @@ desktop.ini
 
 # Logs
 *.log
+logs/
+*.log.*
 
 # Temporary files
 *.tmp
