--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ scipy>=1.10.0
 flask>=2.3.0
 flask-socketio>=5.3.0
 flask-cors>=4.0.0
+flask-limiter>=3.5.0
 requests>=2.31.0
+gunicorn>=21.2.0
 
 # IoT & Comunicação
 paho-mqtt>=1.6.0
@@ -22,6 +24,10 @@ paho-mqtt>=1.6.0
 # Segurança & Auth
 pyjwt>=2.8.0
 werkzeug>=2.3.0
+
+# Validação de Dados
+pydantic>=2.0.0
+email-validator>=2.0.0
 
 # Banco de Dados
 psycopg2-binary>=2.9.0
